force-app/main/default/objects/AiAssessmentSync__c/fields/tenpo_nm__c.field-meta.xml
<CustomField>
    <fullName>tenpo_nm__c</fullName>
    <label>店舗名</label>
    <length>60</length>
    <type>Text</type>
</CustomField>