force-app/main/default/objects/AiAssessmentSync__c/fields/two_tone_color__c.field-meta.xml
<CustomField>
    <fullName>two_tone_color__c</fullName>
    <label>ツートン</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>