force-app/main/default/objects/AiAssessmentSync__c/fields/tyear__c.field-meta.xml
<CustomField>
    <fullName>tyear__c</fullName>
    <label>和暦</label>
    <length>30</length>
    <type>Text</type>
</CustomField>