force-app/main/default/objects/AiAssessmentSync__c/fields/user_adress__c.field-meta.xml
<CustomField>
    <fullName>user_adress__c</fullName>
    <label>使用者_住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>