force-app/main/default/objects/AiAssessmentSync__c/fields/user_id__c.field-meta.xml
<CustomField>
    <fullName>user_id__c</fullName>
    <label>査定登録ユーザーID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>