force-app/main/default/objects/AiAssessmentSync__c/fields/user_info__c.field-meta.xml
<CustomField>
    <fullName>user_info__c</fullName>
    <label>購入検討車種</label>
    <length>255</length>
    <type>Text</type>
</CustomField>