force-app/main/default/objects/AiAssessmentSync__c/fields/user_name__c.field-meta.xml
<CustomField>
    <fullName>user_name__c</fullName>
    <label>使用者_氏名又は名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>