force-app/main/default/objects/AiAssessmentSync__c/fields/user_nm__c.field-meta.xml
<CustomField>
    <fullName>user_nm__c</fullName>
    <label>査定登録ユーザー名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>