force-app/main/default/objects/AiAssessmentSync__c/fields/value_s__c.field-meta.xml
<CustomField>
    <fullName>value_s__c</fullName>
    <label>評価点（画面表示用）</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>