force-app/main/default/objects/AiAssessmentSync__c/fields/value_s_change__c.field-meta.xml
<CustomField>
    <fullName>value_s_change__c</fullName>
    <label>変更前評価点</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>