force-app/main/default/objects/AiAssessmentSync__c/fields/width__c.field-meta.xml
<CustomField>
    <fullName>width__c</fullName>
    <label>車寸_幅</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>