force-app/main/default/objects/AiAssessmentSync__c/fields/ziko_biko__c.field-meta.xml
<CustomField>
    <fullName>ziko_biko__c</fullName>
    <label>事故現状備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>