force-app/main/default/objects/AiAssessmentSync__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>custom_satei_id__c</columns>
    <columns>guest_name__c</columns>
    <columns>car_name__c</columns>
    <columns>tenpo_nm__c</columns>
    <columns>sales_user_id__c</columns>
    <columns>satei_date__c</columns>
    <columns>original_price__c</columns>
    <columns>shonin_user__c</columns>
    <columns>shonin_date__c</columns>
    <columns>shonin_kakaku__c</columns>
    <columns>purchase_opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>